framec_tests/language_specific/typescript/v3_cli_project/negative/parent_forward_without_parent/project.frm
@target typescript
// Anchor for cross-file E403 negative

